# nginx-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: fossa.yml  rust.yml
examples/: Dockerfile
examples/simple/: Cargo.toml  Dockerfile  README.md  config  config.make  nginx.conf  ngx_simple.c
examples/simple/src/: lib.rs
nginx_derive/: Cargo.toml
nginx_derive/src/: lib.rs
nginx_module/: Cargo.toml  build.rs  wrapper.h
nginx_module/src/: bindings.rs  complex_value.rs  connection.rs  http_request.rs  lib.rs  log.rs  md5.rs  ngx_str.rs  pool.rs  timer.rs  unix_socket.rs  var.rs  wrappers.rs
