[package]
  authors     = [ "Gabriel Oprisan <gabriel.oprisan@gcore.com>" ]
  build       = "build.rs"
  description = "Rust bindings for building Nginx modules"
  edition     = "2021"
  homepage    = "https://github.com/g-Core/nginx-rust"
  license     = "Apache-2.0"
  name        = "nginx_module"
  readme      = "README.md"
  repository  = "https://github.com/g-Core/nginx-rust"
  version     = "0.1.4"


  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
anyhow = "1.0.71"
bitflags = "2.3.1"
libc = "0.2.144"
strum = { version = "0.26.1", features = ["derive"] }
url = "2.5.0"