[package]
  authors     = [ "Gabriel Oprisan <gabriel.oprisan@gcore.com>" ]
  build       = "build.rs"
  description = "Rust bindings for building Nginx modules"
  edition     = "2024"
  homepage    = "https://github.com/g-Core/nginx-rust"
  license     = "Apache-2.0"
  name        = "nginx_module"
  readme      = "README.md"
  repository  = "https://github.com/g-Core/nginx-rust"
  version     = "0.1.5"


  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.72"

[dependencies]
anyhow = "1.0"
bitflags = "2.10"
libc = "0.2"
strum = { version = "0.27", features = ["derive"] }
url = "2.5.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nginx_version_1023000)'] }