[package]
  edition = "2024"
  name    = "simple"
  version = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
  crate-type = [ "staticlib" ]


[dependencies]
  anyhow       = "1.0"
  nginx_derive = { path = "../../nginx_derive" }
  nginx_module = { path = "../../nginx_module" }
